fix bootstrap navbar collapse issues

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,3 +1,26 @@
+.navbar-nav {
+    a {
+        text-decoration: none;
+    }
+}
+@include media-breakpoint-down(xs) {
+    .navbar-nav {
+        .nav-item {
+            &:first-child {
+                a {
+                    border-top: 1px solid rgba(0, 0, 0, 0.2);
+                }
+            }
+            
+            a {
+                width: 100%;
+                padding: 8px 15px;
+                display: block;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            }
+        }
+    }
+}
 
 .main-footer {
     padding: 25px 0;
